# hass-websocket-client

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
hass_client/: __init__.py  client.py  exceptions.py  models.py
hass_websocket_client/: client.py  models.py
hass_ws/: client.py  models.py
tests/: conn_auth.py  event_listener.py  ops.py  service_call.py
